Bug 408608 - When displaying updates and "Check for updates" button is clicked, all PackageKit updates briefly disappear
Summary: When displaying updates and "Check for updates" button is clicked, all Packag...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: 5.16.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2019-06-12 13:18 UTC by Nate Graham
Modified: 2021-05-20 00:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.1
Sentry Crash Report:


Attachments
Screen recording depicting the problem (3.38 MB, image/gif)
2019-06-12 14:08 UTC, Nate Graham
Details
Still happening with git master (1.42 MB, video/webm)
2019-07-12 23:46 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2019-06-12 13:18:54 UTC
When I have updates for both Flatpak and PackageKit apps available, when I click the "check for updates" button, the list of PackageKit updates briefly disappears, leaving only the Flatpak apps. Then in a moment they all re-appear. This is somewhat awkward.

I've attached a screen recording from 5.15.5, though I can reproduce on 5.16 too.
Comment 1 Nate Graham 2019-06-12 14:08:34 UTC
Created attachment 120816 [details]
Screen recording depicting the problem
Comment 2 Aleix Pol 2019-06-14 23:59:39 UTC
Git commit 67b313bdd6472e79e3d500f8b32d0451c236ce84 by Aleix Pol.
Committed on 14/06/2019 at 23:59.
Pushed by apol into branch 'Plasma/5.16'.

flatpak: Indicate that updates are being fetched

M  +2    -0    libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp

https://commits.kde.org/discover/67b313bdd6472e79e3d500f8b32d0451c236ce84
Comment 3 Nate Graham 2019-07-12 23:46:39 UTC
That commit didn't appear to fix the issue entirely. Flatpak apps now disappear during update operations, but Flatpak runtimes are still shown. I've attached a screen recording that shows it still happening with Discover from git master.
Comment 4 Nate Graham 2019-07-12 23:46:59 UTC
Created attachment 121488 [details]
Still happening with git master
Comment 5 Nate Graham 2020-02-24 13:54:41 UTC
Seems fixed now in 5.18.