flatpak: Indicate that updates are being fetched

BUG: 408608